fix: preserve profile checkpoints through bounded atomic save retries